Fixed issues from the validator and added a footer section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>George Russell Fan Wiki Page</title>
-<meta classet="UTF-8">
+<meta charset="UTF-8">
 <meta name="Author" content="Samir Sadok">
 
 <meta name="description" content="George Russell, Petronas Mercedes Amg F1 Team,F1">
@@ -11,10 +11,13 @@
 </head>
 
 <body>
-<h1>George Russell Fan Wiki</h1>
+    
+    <header>
+<h1>George Russell Fan Wiki</h1> 
+<hr>
 <h2>Introduction:</h2>
 <p>Hey I'm Samir , this is a fan wiki for George Russell containing all his seasons , races (Not yet hopefully soon), Currently learning web developement and I will be implementing everything I learn here. So please don't judge and thanks for you time !</p>
-
+<hr>
 <nav>
   
     <h2>Table of Contents:</h2>
@@ -22,7 +25,7 @@
     <ul>
      <li><a href="#News">Current News</a></li>
      <li><a href="#EC">Early Carrer</a></li>
-     <li><a href="#">Junior Carrer</a></li>
+     <li><a href="#JC">Junior Carrer</a></li>
      <li><a href="#">Early Rivalries</a></li>
      <li><a href="#">All Seasons</a></li>
      <li><a href="#">Carrer Highlight</a></li>
@@ -30,13 +33,16 @@
      <li><a href="#">Current Season Stats</a></li> 
     </ul>
 </nav>
+</header>
 
+<hr>
+<main>
 <section id="News">
    <article>
 
-    <i><h3>Current News:</h3></i>
+    <h3>Current News:</h3>
     
-   <img src="">
+  
     <p></p>
    </article>
 
@@ -51,22 +57,35 @@
         <li><a href="">Formula Racers(X)</a></li>
     </ul>  
 </section>
+<hr>
 
 <section id="EC">
    <article> 
-     <h2>Early Carrer</h2>
-     <img src="Images/skysports-lewis-hamilton-f1_5506496 (2).jpg" alt="A picture of young George Russell with Lewis Hamilton" loading="lazy" width="400">
+     <h2>Early Carrer:</h2>
+     <!--<p></p>-->
+     <img src="Images/skysports-lewis-hamilton-f1_5506496(2).jpg" alt="A picture of young George Russell with Lewis Hamilton" loading="lazy" width="400">
 
    </article>
+</section>
+
+
+<section id="JC">
+    <h2>Junior Carrer</h2>
+  <img src="Images/56I8369.jpg" alt="Russell on top of the podium ahead of Lando Norris" loading="Lazy" width="400">
 
 
 
 </section>
 
-
-
+<hr>
+</main>
+<footer>
+  <address><p>&lt;&lt;Samir Sadok&gt;&gt;</p></address>
+  <a href="https://github.com/SadokAbdelhak">GitHub Page</a>
+  <br>
+  <address>© 2025 George Russell Fan Wiki. All trademarks and logos belong to their respective owners.</address>
+  <br>
+  <a href="#">Back to top</a>
+</footer>
 </body>
-
-
-
 </html>
