Added seasons folder and css folder also some new sections to be filled

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>George Russell Fan Wiki Page</title>
 <meta charset="UTF-8">
 <meta name="Author" content="Samir Sadok">
-
+<link rel="stylesheet" href="main.css">
 <meta name="description" content="George Russell, Petronas Mercedes Amg F1 Team,F1">
 <link rel="icon" href="Images/mercedes-benz-logo-png_seeklogo-332844.png" type="image/x-icon">
 </head>
@@ -26,7 +26,7 @@
      <li><a href="#News">Current News</a></li>
      <li><a href="#EC">Early Carrer</a></li>
      <li><a href="#JC">Junior Carrer</a></li>
-     <li><a href="#">Early Rivalries</a></li>
+     <li><a href="#ER">Early Rivalries</a></li>
      <li><a href="#">All Seasons</a></li>
      <li><a href="#">Carrer Highlight</a></li>
      <li><a href="#">Teamate's H2H</a></li>
@@ -59,15 +59,14 @@
 </section>
 <hr>
 
-<section id="EC">
-   <article> 
+<section id="EC"> 
      <h2>Early Carrer:</h2>
      <!--<p></p>-->
      <img src="Images/skysports-lewis-hamilton-f1_5506496(2).jpg" alt="A picture of young George Russell with Lewis Hamilton" loading="lazy" width="400">
 
-   </article>
+   
 </section>
-
+<hr>
 
 <section id="JC">
     <h2>Junior Carrer</h2>
@@ -76,7 +75,41 @@
 
 
 </section>
+<hr>
+<section id="ER">
+<h2>Early Rivalries:</h2>
 
+
+</section>
+
+<hr>
+
+<section id="AS">
+  <h2>All Seasons:</h2>
+ <table>
+
+
+    <th>
+        Team 
+    </th>
+    <th>Season</th>
+    <th>Points</th>
+    <th>Finishing Postion</th>
+    <th>Teammate</th>
+    <th>Teammate Points</th>
+    <th><abbr title="Qualification">Quali</abbr> VS <abbr title="Teammate">TM</abbr></th>
+    <th>Race vs <abbr title="Teammate">TM</abbr></th>
+  </tr>
+  <tr>
+    <td>Williams</td>
+    <td><a href="Seasons/2019/2019.html">2019</a></td>
+    <td>0</td>
+    <td></td>
+  </tr>
+  
+ </table>
+
+</section>
 <hr>
 </main>
 <footer>
