Almost done with 2019

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
     <th>Teammate Points</th>
     <th><abbr title="Qualification">Quali</abbr> VS <abbr title="Teammate">TM</abbr></th>
     <th>Race vs <abbr title="Teammate">TM</abbr></th>
+    <th>Average Quali Pos</th>
+    <th>Average Finishing Pos</th>
   </tr>
   <tr>
     <td>Williams</td>
