Fixed validator issues

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-<title>George Russell Fan Wiki Page</title>
+
 <meta charset="UTF-8">
 <meta name="Author" content="Samir Sadok">
 <link rel="stylesheet" href="main.css">
 <meta name="description" content="George Russell, Petronas Mercedes Amg F1 Team,F1">
 <link rel="icon" href="Images/mercedes-benz-logo-png_seeklogo-332844.png" type="image/x-icon">
+<title>GR63 FanWIKI</title>
 </head>
 
 <body>
@@ -88,7 +89,7 @@
   <h2>All Seasons:</h2>
  <table>
 
-
+<tr>
     <th>
         Team 
     </th>
