Added upcoming race section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     
     <ul>
      <li><a href="#News">Current News</a></li>
+     <li><a href="UR">Upcoming Race</a></li>
      <li><a href="#EC">Early Carrer</a></li>
      <li><a href="#JC">Junior Carrer</a></li>
      <li><a href="#ER">Early Rivalries</a></li>
@@ -60,6 +61,15 @@
 </section>
 <hr>
 
+<section id="UR">
+<h2>Upcoming Race:</h2>
+
+<p>The Upcoming Race is the <a href="/Seasons/2025/Races/R19Austin.html">American Grand Prix</a> (Austin)</p>
+<img src="Images/AusRussell.jpg" alt="Russell in Austin">
+
+</section>
+
+<hr>
 <section id="EC"> 
      <h2>Early Carrer:</h2>
      <!--<p></p>-->
